# Polybot

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  DEPLOY_ML.md  IMPLEMENTATION_SUMMARY.md  README.md  README_ML.md  check_out.txt  diagnose.sh  diff_local_vps.txt  live_diag.err  live_diag.out  ml_broadcast_code.rs  new_orderbook_code.txt  parsed_logs.txt  plan.md  polymarket_warmup_code.rs  run_live.err  start.sh  tmp_grep.txt  update_vps.sh  vps_logs.txt  vps_main.rs
.agent/rules/: vps-connection.md
.cargo/: config.toml
config/: default.yaml  local.yaml  v3.yaml.example
dashboard/: .env.example  .env.production  package-lock.json  package.json  pnpm-lock.yaml
dashboard/src/: index.css
dashboard/src/components/: Card.tsx  Dashboard.tsx  Header.tsx  MLPanel.tsx  PositionCard.tsx  PriceCard.tsx  StatsCard.tsx  TechGrid.tsx  TradeRow.tsx
dashboard/src/hooks/: useDashboardStream.ts  (+1 more)
data/: calibrator_state_v2.json  paper_trading_state.json
data/ml_engine/: dataset.json  ml_state.json
data/paper_analytics/: paper_analytics_2026-02-18.csv
data/prices/: prices_2026-02-18.csv  prices_2026-02-19.csv  prices_2026-02-20.csv
data/rejections/: rejections_2026-02-18.csv  rejections_2026-02-19.csv
data/signals/: signals_2026-02-18.csv
data/trades/: trades_2026-02-18.csv
data/winloss/: winloss_2026-02-18.csv
src/: lib.rs  main.reflow.rs  main.rs  main.rs.minified.bak  paper_trading.rs  types.rs
src/backtesting/: mod.rs
src/clob/: dynamic_orderbook_feed.rs  fees.rs  market_discovery.rs  mod.rs  orderbook_feed.rs  rest.rs  signing.rs  types.rs  websocket.rs
src/config/: mod.rs  types.rs
src/dashboard/: api.rs  mod.rs  types.rs  websocket.rs
src/features/: cross_asset.rs  mod.rs  orderbook_tracker.rs  settlement_predictor.rs  temporal_patterns.rs
src/ml_engine/: calibration.rs  config_bridge.rs  data_client.rs  dataset.rs  features.rs  filters.rs  integration.rs  mod.rs  persistence.rs  predictor.rs  training.rs
src/oracle/: aggregator.rs  candles.rs  mod.rs
src/persistence/: mod.rs
src/polymarket/: edge_engine.rs  execution_engine.rs  fee_engine.rs  kelly.rs  labeling.rs  market_state.rs  mod.rs
src/risk/: mod.rs
src/strategy/: calibrator.rs  mod.rs  strategy_trait.rs  v3_strategy.rs
tests/: ml_engine_tests.rs
(+14 files in other folders)
