[package]
name = "polybot"
version = "0.1.0-alpha"
edition = "2021"
rust-version = "1.75"
authors = ["PolyBot Team"]
description = "Directional trading bot for Polymarket 15m/1h BTC/ETH/SOL/XRP markets"
license = "MIT"
readme = "README.md"
repository = "https://github.com/polybot/polybot"

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# WebSocket
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Ethereum / EIP-712 signing
ethers = "2.0"
hex = "0.4"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# CSV persistence
csv = "1.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Configuration
dotenvy = "0.15"
config = "0.14"

# Data structures
rust_decimal = { version = "1.33", features = ["serde"] }
rust_decimal_macros = "1.33"

# Async utilities
async-trait = "0.1"
tokio-stream = "0.1"

# Technical analysis (we'll implement our own, but this helps)
ta = "0.5"

# ML / Data Science
smartcore = { version = "0.4", features = ["serde", "ndarray-bindings"] }
ndarray = { version = "0.15", features = ["serde"] }

# Data storage
bincode = "1.3"

# Random for nonces
rand = "0.8"

# UUID generation
uuid = { version = "1.0", features = ["v4"] }

# Optional: TLS for secure connections
native-tls = "0.2"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# Dashboard API (optional - only for local UI)
axum = { version = "0.7", features = ["ws"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
criterion = "0.5"

[features]
default = []
dashboard = ["axum", "tower", "tower-http"]

[[bin]]
name = "polybot"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
